Added mime types, added some more html to the document, changed javascript to only log a message instead of alert

--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/index.html
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>Index</title>
+    <meta charset="us-ascii" />
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js"> </script>
+    <script src="main.js"></script>
 </head>
 <body>
     <h1>Index</h1>
