--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/index.html
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/index.html
@@ -3,13 +3,15 @@
 <head>
     <title>Index</title>
     <meta charset="us-ascii" />
-    <link rel="stylesheet" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="/main.css" />
+    <script src="/main.js"></script>
 </head>
 <body>
     <h1>Index</h1>
     <p>
         This is a paragraph
     </p>
+    <img src="/image.jpg" style="width:200px;" />
+    <a href="/image.jpg" >Open PDF</a>
 </body>
 </html>
