Other small changes

--- a/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/index.html
+++ b/Ion.Pro.Analyser/Ion.Pro.Analyser/Content/index.html
@@ -32,7 +32,7 @@
             <p>
                 This is a paragraph
             </p>
-            <img src="/image.jpg" style="width:300px;" alt="A Space image"/><br />
+            <img src="/image.jpg" alt="A Space image"/><br />
             <span class="image-text">Image 1. The big space</span>
             <!--<video id="player" src="/videotest.mp4" style="width: 880px"></video>
             <button id="play">Play</button>-->
@@ -47,7 +47,7 @@
             </form>
 
         </div>
-        <div class="footer">(C) Ion Racing 2017 Test page</div>
+        <div class="footer">Analyser 2017 Test page</div>
     </div>
 </body>
 </html>
