--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -6,7 +6,13 @@
     <title>Desktop V2</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <link rel="stylesheet" href="window.css" type="text/css" />
+    <link rel="stylesheet" href="Grid/main.css" type="text/css" />
+
+    <script src="Grid/grid.js"></script>
+
     <script src="htmlhelper.js"></script>
+    <script src="MenuWindow.js"></script>
+    <script src="TaskBar.js"></script>
     <script src="windowsystem.js"></script>
     <script src="app.js"></script>
 </head>
@@ -60,6 +66,38 @@
 
                 <li><a href="">Hello World</a></li>
             </ul>
+        </div>
+    </template>
+
+    <template id="temp-grid">
+        <div class="grid-hcon">
+            <div class="grid-box">
+                <div class="grid-vcon">
+                    <div class="grid-box">
+
+                        <div class="grid-window">
+                            Right box
+                        </div>
+
+                    </div>
+                    <div class="grid-vdiv" id="bar1">&nbsp;</div>
+                    <div class="grid-box" id="window1">
+
+                        <div class="grid-window">
+                            Right box
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="grid-hdiv" id="bar2">&nbsp;</div>
+            <div class="grid-box" id="window2">
+
+                <div class="grid-window">
+                    Right box
+                </div>
+
+            </div>
         </div>
     </template>
     <script>
