added  task manager

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Desktop V2</title>
+    <title>Ion Analyser</title>
     <link rel="stylesheet" href="/app.css" type="text/css" />
     <link rel="stylesheet" href="/window.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/main.css" type="text/css" />
@@ -15,6 +15,7 @@
     <script src="/TaskBar.js"></script>
     <script src="/windowsystem.js"></script>
     <script src="/app.js"></script>
+    <script src="/Applications/TaskManager.js"></script>
 </head>
 <body>
     <div class="background"></div>
