--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -15,12 +15,11 @@
     <script src="/TaskBar.js"></script>
     <script src="/windowsystem.js"></script>
     <script src="/app.js"></script>
-<<<<<<< HEAD
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-=======
     <script src="/Applications/TaskManager.js"></script>
->>>>>>> master
+    <script src="/Plotter.js"></script>
+
+
 </head>
 <body>
     <div class="background"></div>
