--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -23,6 +23,7 @@
     <script src="/models.js"></script>
     <script src="/Plotter.js"></script>
     <script src="/PlotData.js"></script>
+    <script src="/MeterPlot.js"></script>
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
     <script src="/winsys.js"></script>
