Added more advanced grid system

--- a/Grid V2/index.html
+++ b/Grid V2/index.html
@@ -23,7 +23,7 @@
                 flex-flow: column;
             }
             .box{
-                display: inline-block;
+                /*display: inline-block;*/
                 margin: 0;
                 height: 100%;
                 width: 100%;
@@ -38,7 +38,7 @@
             }
             .hsep, .vsep{
                 border: 1px solid darkgray;
-                display: inline-block;
+                /*display: inline-block;*/
                 background-color: green;
                 overflow: hidden;
             }
