ISingle Plot og iMultiPlot

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -26,9 +26,11 @@
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
     <script src="/winsys.js"></script>
+    
 
     <script src="/Applications/TaskManager.js"></script>
     <script src="/Applications/TestApps.js"></script>
+    <script src="/Applications/TestDataViewer.js"></script>
 
     <script src="/Grid/gridsystem.js"></script>
         
