--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -24,6 +24,7 @@
     <script src="/Plotter.js"></script>
     <script src="/PlotData.js"></script>
     <script src="/MeterPlot.js"></script>
+    <script src="/GPSPlot.js"></script>
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
     <script src="/winsys.js"></script>
