Seperated style from structure

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8" />
     <title>Ion Analyser</title>
     <link rel="stylesheet" href="/app.css" type="text/css" />
+    <link rel="stylesheet" href="/app-style.css" type="text/css" />
+
     <link rel="stylesheet" href="/window.css" type="text/css" />
-    <link rel="stylesheet" href="/Grid/main.css" type="text/css" />
+    <link rel="stylesheet" href="/Grid/grid.css" type="text/css" />
+    <link rel="stylesheet" href="/Grid/grid-style.css" type="text/css" />
 
 
     <script src="/app.js"></script>
