--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -64,7 +64,10 @@
                     <span class="window-control-exit">&#x2715;</span>
                 </div>
             </div>
-            <div class="window-body"></div>
+            <div class="window-body-wrapper">
+                <div class="window-body"></div>
+                <div class="window-overlay"></div>
+            </div>
         </div>
         <!--<div class="window-right"></div>
         <div class="window-bottom-left"></div>
