--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <title>Ion Analyser</title>
     <link rel="stylesheet" href="/app.css" type="text/css" />
-    <link rel="stylesheet" href="/app-style.css" type="text/css" />
-
+    <!--<link rel="stylesheet" href="/app-style.css" title="app-style" type="text/css" />-->
+    <link rel="stylesheet" href="/app-style-dark.css" title="app-style" type="text/css" />
+    
     <link rel="stylesheet" href="/window.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid-style.css" type="text/css" />
@@ -26,7 +27,7 @@
     <script src="/models.js"></script>
     <script src="/Plotter.js"></script>
     <script src="/PlotData.js"></script>
-    <script src="/MeterPlot.js"></script>
+    <script src="/GaugePlot.js"></script>
     <script src="/GPSPlot.js"></script>
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
