--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -26,6 +26,7 @@
     <script src="/models.js"></script>
     <script src="/Controllers/Plotter.js"></script>
     <script src="/Controllers/LabelController.js"></script>
+    <script src="/Controllers/BarController.js"></script>
     <script src="/PlotData.js"></script>
     <script src="/Controllers/GaugePlot.js"></script>
     <script src="/Controllers/GPSPlot.js"></script>
