--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -24,6 +24,7 @@
     <script src="/kernel.js"></script>
     <script src="/MenuWindow.js"></script>
     <script src="/models.js"></script>
+    <script src="/Controllers/Controller.js"></script>
     <script src="/Controllers/Plotter.js"></script>
     <script src="/Controllers/LabelController.js"></script>
     <script src="/Controllers/BarController.js"></script>
