Testing how to make draw.

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/window.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid-style.css" type="text/css" />
+    <link rel="stylesheet" href="/Segments.css" type="text/css" />
 
 
     <script src="/app.js"></script>
