Implemented matrix calculations for canvas stuff

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -21,7 +21,7 @@
     <script src="/event.js"></script>    
     <script src="/htmlhelper.js"></script>
     <script src="/kernel.js"></script>
-    <script src="/kernel.js"></script>
+    <script src="/matrix.js"></script>
     <script src="/MenuWindow.js"></script>
     <script src="/models.js"></script>
     <script src="/Controllers/Plotter.js"></script>
@@ -32,6 +32,7 @@
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
     <script src="/winsys.js"></script>    
+    
 
     <script src="/Applications/TaskManager.js"></script>
     <script src="/Applications/TestApps.js"></script>
