--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -25,12 +25,12 @@
     <script src="/MenuWindow.js"></script>
     <script src="/models.js"></script>
     <script src="/Controllers/Controller.js"></script>
-    <script src="/Controllers/Plotter.js"></script>
+    <script src="/Controllers/LineChartController.js"></script>
     <script src="/Controllers/LabelController.js"></script>
     <script src="/Controllers/BarController.js"></script>
     <script src="/PlotData.js"></script>
-    <script src="/Controllers/GaugePlot.js"></script>
-    <script src="/Controllers/GPSPlot.js"></script>
+    <script src="/Controllers/GaugeController.js"></script>
+    <script src="/Controllers/GPSController.js"></script>
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
     <script src="/winsys.js"></script>    
