--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -28,6 +28,7 @@
     <script src="/Controllers/LineChartController.js"></script>
     <script src="/Controllers/LabelController.js"></script>
     <script src="/Controllers/BarController.js"></script>
+    <script src="/Controllers/AccBarController.js"></script>
     <script src="/PlotData.js"></script>
     <script src="/Controllers/GaugeController.js"></script>
     <script src="/Controllers/GPSController.js"></script>
