--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/Grid/grid.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid-style.css" type="text/css" />
 
+    <script src="/newsensys.js"></script>
 
     <script src="/app.js"></script>
     <script src="/application.js"></script>
@@ -21,9 +22,9 @@
     <script src="/event.js"></script>    
     <script src="/htmlhelper.js"></script>
     <script src="/kernel.js"></script>
-    <script src="/kernel.js"></script>
     <script src="/MenuWindow.js"></script>
     <script src="/models.js"></script>
+    
     <script src="/Controllers/Controller.js"></script>
     <script src="/Controllers/LineChartController.js"></script>
     <script src="/Controllers/LabelController.js"></script>
