--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -34,7 +34,8 @@
     <script src="/Controllers/GPSController.js"></script>
     <script src="/sensys.js"></script>
     <script src="/TaskBar.js"></script>
-    <script src="/winsys.js"></script>    
+    <script src="/winsys.js"></script>
+    <script src="/Applications/DataSourceBuilder.js"></script>
 
     <script src="/Applications/TaskManager.js"></script>
     <script src="/Applications/TestApps.js"></script>
