--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -37,6 +37,8 @@
     <script src="/TaskBar.js"></script>
     <script src="/winsys.js"></script>
     <script src="/Applications/DataSourceBuilder.js"></script>
+    <script src="/Controllers/DSBController.js"></script>
+
 
     <script src="/Applications/TaskManager.js"></script>
     <script src="/Applications/TestApps.js"></script>
