Added theme support

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <title>Ion Analyser</title>
+    <link rel="stylesheet" id="main-theme" href="/app-style-dark.css" title="app-style" type="text/css" />
+
     <link rel="stylesheet" href="/app.css" type="text/css" />
     <!--<link rel="stylesheet" href="/app-style.css" title="app-style" type="text/css" />-->
-    <link rel="stylesheet" href="/app-style-dark.css" title="app-style" type="text/css" />
+    
     
     <link rel="stylesheet" href="/window.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid.css" type="text/css" />
     <link rel="stylesheet" href="/Grid/grid-style.css" type="text/css" />
 
+    <link rel="stylesheet" disabled href="app-style.css" />
     <script src="/newsensys.js"></script>
 
     <script src="/app.js"></script>
