--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Ion Analyser</title>
-    <link rel="stylesheet" disabled href="app-style.css" />
+    <!--<link rel="prefetch" type="text/css" href="app-style.css" />
+    <link rel="prefetch" type="text/css" href="app-style-dark.css" />-->
 
 
     <link rel="stylesheet" id="main-theme" href="/app-style-dark.css" title="app-style" type="text/css" />
@@ -26,7 +27,7 @@
     <script src="/AppWindow.js"></script>
     <script src="/comsys.js"></script>
     <script src="/event.js"></script>    
-    <script src="/htmlhelper.js"></script>
+    <script src="/HtmlHelper.js"></script>
     <script src="/kernel.js"></script>
     <script src="/MenuWindow.js"></script>
     <script src="/models.js"></script>
