Fixed small problem with svg files
Change eventsystem to new system that have new event methods instead of
old sinle manger

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -71,9 +71,21 @@
                     Hello World
                 </div>
                 <div class="window-control">
-                    <span class="window-control-min">-</span>
-                    <span class="window-control-max">+</span>
-                    <span class="window-control-exit">&#x2715;</span>
+                    <span class="window-control-min">
+                        <svg width="10" height="10">
+                            <line id="svg_1" x1="0" y1="5" x2="10" y2="5" stroke-width="1" stroke="white" fill="none" />
+                        </svg>
+                    </span><span class="window-control-max">
+                        <svg width="10" height="10">
+                            <line id="svg_1" x1="0" y1="5" x2="10" y2="5" stroke-width="1" stroke="white" fill="none" />
+                            <line id="svg_2" x1="5" y1="0" x2="5" y2="10" stroke-width="1" stroke="white" fill="none" />
+                        </svg>
+                    </span><span class="window-control-exit">
+                        <svg width="10" height="10">
+                            <line id="svg_1" x1="0" y1="0" x2="10" y2="10" stroke-width="1" stroke="white" fill="none" />
+                            <line id="svg_2" x1="10" y1="0" x2="0" y2="10" stroke-width="1" stroke="white" fill="none" />
+                        </svg>
+                    </span>
                 </div>
             </div>
             <div class="window-body-wrapper">
