--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -52,7 +52,6 @@
     <script src="/Applications/TestDataViewer.js"></script>
 
     <script src="/Grid/gridsystem.js"></script>
-            
 </head>
 <body>
     <div class="background"></div>
@@ -73,17 +72,17 @@
                 <div class="window-control">
                     <span class="window-control-min">
                         <svg width="11" height="11" shape-rendering="optimizeSpeed">
-                            <line id="svg_1" x1="0" y1="6" x2="11" y2="6" stroke-width="1" stroke="white" fill="none" />
+                            <line class="info-color" id="svg_1" x1="0" y1="6" x2="11" y2="6" stroke-width="1"  fill="none" />
                         </svg>
                     </span><span class="window-control-max">
                         <svg width="11" height="11" shape-rendering="optimizeSpeed">
-                            <line id="svg_1" x1="0" y1="6" x2="12" y2="6" stroke-width="1" stroke="white" fill="none" />
-                            <line id="svg_2" x1="6" y1="0" x2="6" y2="12" stroke-width="1" stroke="white" fill="none" />
+                            <line class="info-color" id="svg_1" x1="0" y1="6" x2="12" y2="6" stroke-width="1"  fill="none" />
+                            <line class="info-color" id="svg_2" x1="6" y1="0" x2="6" y2="12" stroke-width="1"  fill="none" />
                         </svg>
                     </span><span class="window-control-exit">
                         <svg width="11" height="11" shape-rendering="optimizeSpeed">
-                            <line id="svg_1" x1="0" y1="0" x2="11" y2="11" stroke-width="1" stroke="white" fill="none" />
-                            <line id="svg_2" x1="11" y1="0" x2="0" y2="11" stroke-width="1" stroke="white" fill="none" />
+                            <line class="info-color" id="svg_1" x1="0" y1="0" x2="11" y2="11" stroke-width="1"  fill="none" />
+                            <line class="info-color" id="svg_2" x1="11" y1="0" x2="0" y2="11" stroke-width="1"  fill="none" />
                         </svg>
                     </span>
                 </div>
