--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -2,13 +2,19 @@
 
 <html lang="en">
 <head>
+    <script  type="application/json">
+        [
+            "this is a test"
+        ]
+    </script>
+    <script src="/preload.js"></script>
     <meta charset="utf-8" />
     <title>Ion Analyser</title>
     <!--<link rel="prefetch" type="text/css" href="app-style.css" />
     <link rel="prefetch" type="text/css" href="app-style-dark.css" />-->
 
 
-    <link rel="stylesheet" id="main-theme" href="/app-style-dark.css" title="app-style" type="text/css" />
+    <!--<link rel="stylesheet" id="main-theme" href="/app-style-dark.css" title="app-style" type="text/css" />-->
 
     <link rel="stylesheet" href="/app.css" type="text/css" />
     <!--<link rel="stylesheet" href="/app-style.css" title="app-style" type="text/css" />-->
