--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/test.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/test.html
@@ -1,10 +1,155 @@
 ﻿<!DOCTYPE html>
-<html>
+
+<html lang="en">
 <head>
+    <script src="/preload.js"></script>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Ion Analyser</title>
+
+    <link rel="stylesheet" href="/Style/app.css" type="text/css" />
+
+
+    <link rel="stylesheet" href="/Style/window.css" type="text/css" />
+    <link rel="stylesheet" href="/Style/grid.css" type="text/css" />
+    <link rel="stylesheet" href="/Style/grid-style.css" type="text/css" />
+
+
+    <script src="/event.js"></script>
+    <script src="/htmlhelper.js"></script>
+    <script src="/models.js"></script>
+
+    <script src="/Systems/application.js"></script>
+    <script src="/Systems/AppWindow.js"></script>
+    <script src="/Systems/appsys.js"></script>
+    <script src="/Systems/comsys.js"></script>
+    <script src="/Systems/sensys.js"></script>
+    <script src="/Systems/winsys.js"></script>
+
+
+    <script src="/OSComponents/menuwindow.js"></script>
+    <script src="/OSComponents/TaskBar.js"></script>
+
+    <script src="/Applications/DataSourceBuilder.js"></script>
+    <script src="/Applications/TaskManager.js"></script>
+    <script src="/Applications/TestApps.js"></script>
+    <script src="/Applications/TestDataViewer.js"></script>
+
+    <script src="/Grid/gridsystem.js"></script>
+    <script src="/Components/components.js"></script>
+
+    <script src="/Controllers/Controller.js"></script>
+    <script src="/Controllers/LineChartController.js"></script>
+    <script src="/Controllers/LabelController.js"></script>
+    <script src="/Controllers/SteeringWheelController.js"></script>
+    <script src="/Controllers/BarController.js"></script>
+    <script src="/Controllers/GaugeController.js"></script>
+    <script src="/Controllers/GPSController.js"></script>
+    <script src="/Controllers/DataSourceAssignmentController.js"></script>
+    <script src="/Controllers/DataSourceBuildController.js"></script>
+
+    <script src="/kernel.js"></script>
+    <script src="/testground.js"></script>
+    <script src="/app.js"></script>
 </head>
 <body>
+    <div class="background"></div>
+    <div class="taskbar">
 
+    </div>
+    <template id="temp-window">
+        <!--<div class="window-wrapper">-->
+        <!--<div class="window-top-left"></div>
+        <div class="window-top"></div>
+        <div class="window-top-right"></div>
+        <div class="window-left"></div>-->
+        <div class="window">
+            <div class="window-header">
+                <div class="window-title">
+                    Hello World
+                </div>
+                <div class="window-control">
+                    <span class="window-control-min">
+                        <svg width="11" height="11" shape-rendering="optimizeSpeed">
+                            <line class="info-color" id="svg_1" x1="0" y1="6" x2="11" y2="6" stroke-width="1" fill="none" />
+                        </svg>
+                    </span><span class="window-control-max">
+                        <svg width="11" height="11" shape-rendering="optimizeSpeed">
+                            <line class="info-color" id="svg_1" x1="0" y1="6" x2="12" y2="6" stroke-width="1" fill="none" />
+                            <line class="info-color" id="svg_2" x1="6" y1="0" x2="6" y2="12" stroke-width="1" fill="none" />
+                        </svg>
+                    </span><span class="window-control-exit">
+                        <svg width="11" height="11" shape-rendering="optimizeSpeed">
+                            <line class="info-color" id="svg_1" x1="0" y1="0" x2="11" y2="11" stroke-width="1" fill="none" />
+                            <line class="info-color" id="svg_2" x1="11" y1="0" x2="0" y2="11" stroke-width="1" fill="none" />
+                        </svg>
+                    </span>
+                </div>
+            </div>
+            <div class="window-body-wrapper">
+                <div class="window-body"></div>
+                <div class="window-overlay"></div>
+            </div>
+        </div>
+        <!--<div class="window-right"></div>
+        <div class="window-bottom-left"></div>
+        <div class="window-bottom"></div>-->
+        <div class="window-bottom-right"></div>
+        <!--</div>-->
+    </template>
+    <template>
+        <div class="menu-window">
+            <ul>
+                <li>
+                    <a href="">Hello World</a>
+                    <ul>
+                        <li><a href="#">This is a sub menu</a></li>
+                        <li>
+                            <a href="#">This is a sub menu</a>
+                        </li>
+                        <li><a href="#">This is a sub menu</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="">Hello World</a>
+                </li>
+                <li><a href="">Hello World</a></li>
+
+                <li><a href="">Hello World</a></li>
+            </ul>
+        </div>
+    </template>
+    <!--<div id="dropbox" style="display: inline-block; position: fixed; left: 500px; top: 300px; background-color: yellow; width: 100px; height: 100px; z-index: 1000000; border: 1px solid black;"></div>-->
+    <template id="temp-grid">
+        <div class="grid-hcon">
+            <div class="grid-box">
+                <div class="grid-vcon">
+                    <div class="grid-box">
+
+                        <div class="grid-window">
+                            Right box
+                        </div>
+
+                    </div>
+                    <div class="grid-vdiv" id="bar1">&nbsp;</div>
+                    <div class="grid-box" id="window1">
+
+                        <div class="grid-window">
+                            Right box
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="grid-hdiv" id="bar2">&nbsp;</div>
+            <div class="grid-box" id="window2">
+
+                <div class="grid-window">
+                    Right box
+                </div>
+
+            </div>
+        </div>
+    </template>
 </body>
 </html>
