Added support for showing Point3D datastructure

--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -4,6 +4,7 @@
 <head>
     <script src="/preload.js"></script>
     <meta charset="utf-8" />
+    <meta name="viewport"  content="width=device-width, initial-scale=1.0" />
     <title>Ion Analyser</title>
 
     <link rel="stylesheet" href="/Style/app.css" type="text/css" />
@@ -53,6 +54,9 @@
 <body>
     <div class="background"></div>
     <div class="taskbar">
+
+    </div>
+    <div class="window-container">
 
     </div>
     <template id="temp-window">
