--- a/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
+++ b/Ion.Pro.Analyser/Ion.Web.AnalyserDesktop/index.html
@@ -4,7 +4,10 @@
 <head>
     <script src="/preload.js"></script>
     <meta charset="utf-8" />
-    <meta name="viewport"  content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!--<meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">-->
+
     <title>Ion Analyser</title>
 
     <link rel="stylesheet" href="/Style/app.css" type="text/css" />
